Fix download icon spacing

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -44,7 +44,8 @@
   padding-bottom: 2px;
 }
 
-.rightSpacedIcon {
+.rightSpacedIcon,
+.downloadIcon {
   margin-right: 10px;
 }
 
@@ -57,8 +58,6 @@
 }
 
 .downloadIcon {
-  margin-top: 2px;
-  margin-right: 10px;
   width: 15px;
 }
 
